// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#Menu render 1`] = `
<Fragment>
  <ContextConsumer>
    <Component />
  </ContextConsumer>
  <SideNav
    chat={
      <div>
        chat
      </div>
    }
    debug={
      <div>
        debug
      </div>
    }
    onOpenRegister={[Function]}
    onOpenSignIn={[Function]}
    onSaveLanguage={[MockFunction]}
    onSetModal={[MockFunction]}
    subscription={
      <div>
        subscription
      </div>
    }
  />
</Fragment>
`;

exports[`#Menu render with forgot password modal 1`] = `
<Fragment>
  <ContextConsumer>
    <Component />
  </ContextConsumer>
  <SideNav
    chat={
      <div>
        chat
      </div>
    }
    debug={false}
    onOpenRegister={[Function]}
    onOpenSignIn={[Function]}
    onSaveLanguage={[MockFunction]}
    onSetModal={
      [MockFunction] {
        "calls": Array [
          Array [
            "forgotPassword",
          ],
        ],
        "results": Array [
          Object {
            "isThrow": false,
            "value": undefined,
          },
        ],
      }
    }
    subscription={
      <div>
        subscription
      </div>
    }
  />
  <CloseByKey
    closeKey="Escape"
    onClose={[Function]}
  >
    <Modal
      onClose={[Function]}
      size="normal"
    >
      <ModalSection>
        <ContextConsumer>
          <Component />
        </ContextConsumer>
      </ModalSection>
    </Modal>
  </CloseByKey>
</Fragment>
`;

exports[`#Menu render with modal 1`] = `
<Fragment>
  <ContextConsumer>
    <Component />
  </ContextConsumer>
  <SideNav
    chat={
      <div>
        chat
      </div>
    }
    debug={false}
    onOpenRegister={[Function]}
    onOpenSignIn={[Function]}
    onSaveLanguage={[MockFunction]}
    onSetModal={
      [MockFunction] {
        "calls": Array [
          Array [
            "myBooking",
          ],
        ],
        "results": Array [
          Object {
            "isThrow": false,
            "value": undefined,
          },
        ],
      }
    }
    subscription={
      <div>
        subscription
      </div>
    }
  />
  <CloseByKey
    closeKey="Escape"
    onClose={[Function]}
  >
    <Modal
      onClose={[Function]}
      size="normal"
    >
      <ModalSection>
        <Login
          onCloseSuccess={[Function]}
          onOpenForgotPassword={[Function]}
          onOpenMyBooking={[Function]}
          onOpenRegister={[Function]}
          onOpenSignIn={[Function]}
          open="myBooking"
        />
      </ModalSection>
    </Modal>
  </CloseByKey>
</Fragment>
`;
